fix spacing in lower section

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -400,11 +400,13 @@ body .container .projects .allProjects .project .projectLinks .link {
   border-radius: 10px;
   -webkit-transition: all 300ms ease-in-out;
   transition: all 300ms ease-in-out;
+  background-color: white;
+  color: #0D0D0D;
 }
 
 body .container .projects .allProjects .project .projectLinks .link:hover {
-  color: #0D0D0D;
-  background-color: white;
+  color: white;
+  background-color: #0D0D0D;
 }
 
 body .container .projects .moreProjects {
@@ -585,7 +587,7 @@ body .container .contact .media a img {
   }
   body .container .projects .allProjects .project .imageContainer {
     max-width: 30rem;
-    height: 100%;
+    height: 15rem;
   }
   body .container .projects .allProjects .project .info {
     height: 100%;
@@ -597,6 +599,10 @@ body .container .contact .media a img {
   body .container .projects .allProjects .project .info .aboutProject {
     font-size: 1.2rem;
     width: 30rem;
+  }
+  body .container .projects .allProjects .project .lower {
+    width: 100%;
+    padding-right: 1rem;
   }
   body .container .projects .allProjects .project .lower .techHead {
     font-size: 1.2rem;
